@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-11-06T01:06:42Z",
-  "count_outdated" : 110,
-  "uniques_outdated" : 66,
-  "count" : 111,
-  "uniques" : 67,
+  "timestamp" : "2025-11-13T01:07:18Z",
+  "count_outdated" : 111,
+  "uniques_outdated" : 67,
+  "count" : 112,
+  "uniques" : 68,
   "views" : [
     {
-      "timestamp": "2025-10-28T00:00:00Z",
+      "timestamp": "2025-11-12T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
