@@ -1,3 +1,12 @@
+2025-11-13T01:07:18Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19317067468 # 807
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-13
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 66 110 / 67 111
+* notice: next accum: outdated-unq outdated-all / unq all: 67 111 / 68 112
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2025-10-28] / [2025-11-12]
+
 2025-11-06T01:06:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19121404326 # 800
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-06
